Changelog
=========

3.0 - unreleased
----------------

- Added test for language independent lines fields.
  [hannosch]

- Fixed the testSelector tests to work with the new default page handling.
  [hannosch]

- Cleaned up some old package metadata and converted zLOG usage to logging.
  [hannosch]

- Changed the language selector to respect default pages. We now link to the
  container of the translated default page rather than the default page itself.
  [hannosch]

- Added Language as an additional index to the uid catalog. This is required
  to get at least normal reference criteria to be able to restrict their
  selections based on the language.
  [hannosch]

- Adjust the copyField methods of the LanguageIndependentFields adapter to
  work with fields which have no accessor methods.
  [hannosch]

- Reworked the translationOf reference handling. Instead of relying on the
  normal Archetypes reference API, we digg into some of the internals to
  optimize the handling for the specific use-case we have:

  * We added Language as additional metadata to the reference catalog. To do
    so we needed to add a GenericSetup handler for the catalog to this package
    for now. This should be moved to Archetypes itself. An upgrade step for
    existing sites is available and needs to be run. The step is advertised in
    the add-on control panel of Plone 3.3 and later or available via the
    portal_setup tool in the ZMI.

    The new metadata reflects the language of the source of the reference, so
    we index the translation languages and not the canonical language. So a
    reference inside the at_references folder of a translation, stores the
    Language of that translation. It gets it via Acquisition, since neither the
    reference nor the at_references OFS.Folder has a Language function.

  * As a second step we use this new metadata to more efficiently query the
    reference catalog. In general we avoid getting the real objects where